--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 rand = "0.7.0"
 rand_pcg = "0.2.0"
+lazy_static = "1.4.0"
 
 [dev-dependencies]
 criterion = "0.3"
@@ -14,3 +15,6 @@ criterion = "0.3"
 [[bench]]
 name = "benchmark"
 harness = false
+
+[profile.release]
+debug = true
