--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 [dependencies]
 rand = "0.7.0"
 rand_pcg = "0.2.0"
-lazy_static = "1.4.0"
+typenum = "1.11.2"
+sized-chunks = "0.5.0"
 
 [dev-dependencies]
 criterion = "0.3"
